Add more up-to-date info for the get involved aside.

--- a/index.html
+++ b/index.html
@@ -463,25 +463,46 @@
             <h3>Get involved with these organizations that help homeless families in Southern California</h3>
             <ul>
               <li>
-                <div title>United Way</div>
+                <div title>L.A. Family Housing</div>
                 <p description>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Suspendisse at quam mauris.  Fusce trstique lorem ante, vitae allamcorper neque lacinia vel.
+                  Based in the San Fernando Valley, LAFH works to connect families and individuals with services and permanent supportive housing based on their individual needs.
                 </p>
-                <a href="http://unitedwayla.org">www.unitedwayla.org</a>
+                <a href="http://lafh.org">www.lafh.org</a>
               </li>
               <li>
-                <div title>United Way</div>
+                <div title>Harbor Interfaith</div>
                 <p description>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Suspendisse at quam mauris.  Fusce trstique lorem ante, vitae allamcorper neque lacinia vel.
+                  Operating in the South Bay, Harbor Interfaith provides an emergency shelter for families, as well as transitional housing, workshops and supportive services like childcare and food assistance for families experiencing homelessness.
                 </p>
-                <a href="http://unitedwayla.org">www.unitedwayla.org</a>
+                <a href="http://www.harborinterfaith.org">www.harborinterfaith.org</a>
               </li>
               <li>
-                <div title>United Way</div>
+                <div title>St. Joseph's Center</div>
                 <p description>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Suspendisse at quam mauris.  Fusce trstique lorem ante, vitae allamcorper neque lacinia vel.
+                  For 40 years, Venice's St. Joseph's Center has been assisting homeless families and individuals with a food pantry and family center, where low-income families can have access to food and job training, as well as kindergarten preparation services, among others.
                 </p>
-                <a href="http://unitedwayla.org">www.unitedwayla.org</a>
+                <a href="http://stjosephctr.org/">www.stjosephctr.org</a>
+              </li>
+              <li>
+                <div title>PATH Los Angeles</div>
+                <p description>
+                  With several centers set up across the city, PATH provides temporary housing for single mothers and their children, as well as separate centers for single men, women, veterans, and people living with HIV/AIDS. They're known for having a one-stop "mall" for homeless services, including housing, health and employment counseling, all in one place.
+                </p>
+                <a href="http://www.epath.org">www.epath.org</a>
+              </li>
+              <li>
+                <div title>HOPICS</div>
+                <p description>
+                  Homeless Outreach Program Integrated Care System (HOPICS) was founded by a formerly homeless man who's vision was to employ formerly homeless to provide outreach to those still on the street. Based in South L.A.,Hopics now features a home and family program focused on finding permanent housing for families with children under five, therapeutic and psychiatric services, as well as a drop-in center for families and individuals.
+                </p>
+                <a href="http://www.hopics.org">www.hopics.org</a>
+              </li>
+              <li>
+                <div title>Union Station Homeless Services</div>
+                <p description>
+                  With several centers active in Pasadena and the San Gabriel Valley, USHS provides temporary housing to families and individuals, and provides resources for families experiencing homelessness or at risk of becoming homeless in the near future.
+                </p>
+                <a href="https://unionstationhs.org">www.unionstationhs.org</a>
               </li>
             </ul>
           </aside>
