--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                   <img src="./images/ctrl_volume-max.svg" alt="Max Volume">
                 </button>
               </div>
+              <a download-audio>U</a>
               <button class="jp-stop" role="button" tabindex="0">
                 <img src="./images/ctrl_audio-close.svg" alt="Stop">
               </button>
@@ -914,7 +915,7 @@
             <span title>ART DIRECTION AND UX DESIGN:&nbsp;</span> <span>Katie Briggs</span>
           </div>
           <div>
-            <span title>DEVELOPMENT:&nbsp;</span> <address>Chris Keller</address><span comma>,&nbsp;</span><span>Ben Titcomb</span>
+            <span title>DEVELOPMENT:&nbsp;</span> <address>Chris Keller</address>
           </div>
           <div>
             <span title>PROJECT MANAGEMENT:&nbsp;</span> <span>Vijay Singh</span>
