--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>Broke | 89.3 KPCC</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Most officers will go their entire career without shooting at anyone. Among the shootings that took place during the five years KPCC reviewed, many involved life-saving acts of bravery." />
+    <meta name="description" content="Interest in solving homelessness has intensified over the past year. But there’s a side to the crisis that hasn’t garnered as much attention: an endless stream of families slipping into homelessness. There are more than 16,000 homeless families in Los Angeles County alone. Here’s why that’s happening." />
     <meta property="og:site_name" content="KPCC" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Broke: Why more California families are becoming homeless" />
     <meta property="og:url" content="http://projects.scpr.org/broke/" />
-    <meta property="og:description" content="Most officers will go their entire career without shooting at anyone. Among the shootings that took place during the five years KPCC reviewed, many involved life-saving acts of bravery." />
+    <meta property="og:description" content="Interest in solving homelessness has intensified over the past year. But there’s a side to the crisis that hasn’t garnered as much attention: an endless stream of families slipping into homelessness. There are more than 16,000 homeless families in Los Angeles County alone. Here’s why that’s happening." />
     <meta property="og:image" content="http://a.scpr.org/i/b10ec0efebe4392a9bcbd2e99a70f0c3/148452-full.jpg" />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="683" />
@@ -20,7 +20,7 @@
     <meta name="twitter:title" content="Broke: Why more California families are becoming homeless">
     <meta name="twitter:url" content="http://projects.scpr.org/broke/" />
     <meta name="twitter:image" content="http://a.scpr.org/i/b10ec0efebe4392a9bcbd2e99a70f0c3/148452-full.jpg" />
-    <meta name="twitter:description" content="Most officers will go their entire career without shooting at anyone. Among the shootings that took place during the five years KPCC reviewed, many involved life-saving acts of bravery." />
+    <meta name="twitter:description" content="Interest in solving homelessness has intensified over the past year. But there’s a side to the crisis that hasn’t garnered as much attention: an endless stream of families slipping into homelessness. There are more than 16,000 homeless families in Los Angeles County alone. Here’s why that’s happening." />
     <link rel="shortcut icon" href="../../favicon.ico">
 
     <link rel="stylesheet" href="index.css">
