--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         <label open for="nav-drawer-toggler-checkbox">
           <img src="./images/icon_plus.svg">
-          <span>Political Engagement Tool</span>
+          <span>GET INVOLVED</span>
         </label>
       </header>
 
@@ -173,7 +173,7 @@
         </div>
 
 
-        <address class="byline">Published January 7, 2014 by <a href="http://www.scpr.org/about/people/staff/rine-palta" class="byline__link">Rina Palta</a> and <a href="http://www.scpr.org/about/people/staff/priska-neely" class="byline__link">Priska Neely</a></address>
+        <address class="byline"><p>Published January 5, 2016</p> by <a href="http://www.scpr.org/about/people/staff/rine-palta" class="byline__link">Rina Palta</a> and <a href="http://www.scpr.org/about/people/staff/priska-neely" class="byline__link">Priska Neely</a></address>
 
 
         <div share-story>
@@ -190,12 +190,12 @@
 
 
         <aside audio story-audio-1
-        data-title="Broke Special"
+        data-title="Broke: A special report"
         data-src="https://s3-us-west-1.amazonaws.com/scpr-projects/broke/BROKE+SPECIAL.mp3"
-        onClick="ga('send', 'event', 'hsp', 'audioPlay', 'Broke Special');">
+        onClick="ga('send', 'event', 'hsp', 'audioPlay', 'Broke: A special report');">
           <button play></button>
           <div details>
-            <span title>Broke Special</span>
+            <span title>Broke: A special report</span>
             <span duration>24 min 22 sec</span>
           </div>
         </aside>
@@ -209,7 +209,7 @@
 
           <p>“I had promised myself there’s things I was going to do while I was pregnant,” she said. “And after meeting my baby, I was like: I have to get us a place. You have to have your own room.”</p>
 
-          <p>Marshall was homeless. She had cash assistance from the state, but that didn’t cover rent.</p>
+          <p>Marshall was homeless. She had a job at a movie theater and cash assistance from the state, but that didn’t cover rent.</p>
 
           <p>They were living in a shelter in Boyle Heights, hoping one of Los Angeles’ scattered non-profits would find them a subsidized apartment. Despite the disruption, Zah'Nyah had been doing well.</p>
 
@@ -356,7 +356,7 @@
         <figure>
           <img src="http://a.scpr.org/i/515c6479a08c532b47779c2cb951b80a/148416-full.jpg" alt="LAPD Medal of Valor">
           <figcaption>
-            Lackee, left, and boyfriend Allan Salvago hold their 1-year-old son, Allan Jr., outside their RV at Panorama Park in Panorama City.  Every 72 hours, the family must move the R.V. 100 feet to avoid a ticket from city parking enforcement.
+            Salvago, left, and boyfriend Allan Monteagudo hold their 1-year-old son, Allan Jr., outside their RV at Panorama Park in Panorama City.  Every 72 hours, the family must move the RV 100 feet to avoid a ticket from city parking enforcement.
             <address>Maya Sugarman / KPCC</address>
           </figcaption>
         </figure>
@@ -366,7 +366,7 @@
         <section>
           <p>Monteagudo, 43, lives with his girlfriend Lackee Salvago, teenaged son Aaron and the couple’s year-old baby A.J. in an RV, parked on the street.</p>
 
-          <p>Turning on the water in the R.V. is out of the question.</p>
+          <p>Turning on the water in the RV is out of the question.</p>
 
           <p>“It’s old,” Allan said. “It barely moves.”</p>
 
@@ -377,8 +377,6 @@
           <p>For now, Monteagudo and Salvago sleep in the RV’s full-size bed with A.J. Aaron curls up on the kitchen bench. They cook on portable stoves and drink bottled water. They shower at a nearby 24 Hour Fitness. The monthly fee is worth it for the showers. </p>
 
           <p>Salvago sometimes works as an in-home caregiver.</p>
-
-          <p>&nbsp;</p>
 
           <p>But it’s hard.</p>
 
@@ -393,7 +391,7 @@
           <figure>
             <img src="http://a.scpr.org/i/ce436cb91c9976ff89f03ab08947eea9/148417-eight.jpg">
             <figcaption>
-              One-year-old Allan Salvago Jr. plays with his toys outside his family's R.V. at Panorama Park.  Before he was born, A.J. was diagnosed with spina bifida, a serious neurological condition.
+              One-year-old Allan Monteagudo Jr. plays with his toys outside his family's RV at Panorama Park.  Before he was born, A.J. was diagnosed with spina bifida, a serious neurological condition.
               <address>Maya Sugarman / KPCC</address>
             </figcaption>
           </figure>
@@ -402,7 +400,7 @@
 
           <p>Those situations are considered bad for kids. Babies and toddlers don’t have space to move. It’s loud. There’s no privacy. Developmental, speech, and emotional delays are common, according to Stacey Scarborough, with Venice Family Clinic’s Head Start program.</p>
 
-          <p>These crowded houses put families on the fragile precipice of homelessness. A dead car battery, an illness, a layoff or a bad argument frequently puts entire families out on the street. KPCC heard these stories repeatedly from homeless families.</p>
+          <p>These crowded households put families on the fragile precipice of homelessness. A dead car battery, an illness, a layoff or a bad argument frequently puts entire families out on the street. KPCC heard these stories repeatedly from homeless families.</p>
 
           <p>For Monteagudo and Salvago, it happened when his two little girls from a previous relationship came to stay with them.</p>
 
@@ -455,7 +453,7 @@
 
 
         <section>
-          <p>Ellen Bassuk, a Harvard University associate professor of psychiatry who has done extensive research on homeless children said the effects are well documented.</p>
+          <p>Ellen Bassuk, a Harvard University associate professor of psychiatry who has done extensive research on homeless children, said the effects are well documented.</p>
 
           <p>Children who experience homelessness are more likely to repeat a grade or two. They get suspended more. Their high school graduation rates are below 20 percent. They’re more likely to have health problems, like asthma. </p>
 
@@ -548,7 +546,7 @@
 
           <p>The family slept in her Chevy Impala when it was the only option.</p>
 
-          <p>“We had to put the car seat in the trunk, three on the back seat, two on the front seat, I’ll hold JJ,” her two-year-old, she recounted.</p>
+          <p>“We had to put the car seat in the trunk, three on the back seat, two on the front seat, I’ll hold J.J.,” her two-year-old, she recounted.</p>
 
           <p>In September, her car was impounded.</p>
         </section>
@@ -564,7 +562,7 @@
 
 
         <section>
-          <p>Homelessness is the only life her toddler J.J. has ever known. </p>
+          <p>Homelessness is the only life her toddler J.J. had ever known.</p>
 
           <p>A few weeks ago, Dixon said J.J. found a $10 bill in her purse.</p>
 
@@ -598,11 +596,11 @@
         <section>
           <p>Trini Chaney has always struggled to keep a roof over her head, ever since she left an abusive home nearly three decades ago at the age of 17. But somehow, she said, it used to be easier.</p>
 
-          <p>“See, back in the day, the apartments was $525 for a one-bedroom,” she said. “You could find something.”</p>
+          <p>“See, back in the day, the apartments were $525 for a one-bedroom,” she said. “You could find something.”</p>
 
           <p>When she had her daughter 17 years ago, the nearly $600 monthly checks from CalWORKs helped keep her small family afloat.</p>
 
-          <p>“I was paying my rent, I was paying my bills, I was going to work and I had my single apartment,” she said “All off of CalWORKs. But the rent was cheap."</p>
+          <p>“I was paying my rent. I was paying my bills. I was going to work and I had my single apartment,” she said “All off of CalWORKs, b ut the rent was cheap."</p>
 
           <p>“Now? Everything’s a thousand and up,” she said.</p>
 
@@ -772,7 +770,7 @@
           <figure>
             <img src="http://a.scpr.org/i/eb52274ad53682fdef0576da36eac6f8/148464-full.jpg">
             <figcaption>
-              Alexandra Lazaro, 16 at the time, sits on her bed in her family’s four-bedroom apartment in Anaheim, Calif. on Monday, June 20, 2016. Lazaro, who is now in her junior year of high school, says her grades suffered while her family bounced from shelter to shelter.
+              Alexandra Lazaro, 16 at the time, sits on her bed in her family’s four-bedroom apartment in Anaheim. Lazaro, who is now in her junior year of high school, says her grades suffered while her family bounced from shelter to shelter.
               <address>Maya Sugarman / KPCC</address>
             </figcaption>
           </figure>
@@ -817,7 +815,7 @@
 
           <p>The vouchers are hard to get — and almost as hard to use in a tight rental market. Nationally, about a quarter of those who qualify for vouchers actually get them. In Los Angeles, the waitlist has been closed to new applicants for 16 years and tens of thousands are still waiting.</p>
 
-          <p>But some of the homeless get to jump the line. The city of Los Angeles has set aside a total of 4,811 of its vouchers for homeless people over the past few years.</p>
+          <p>But some of the homeless get to jump the line. The city of Los Angeles has set aside a total of 4,811 of its Section 8 vouchers for homeless people over the past few years.</p>
 
           <figure bottom-bound>
             <img src="http://a.scpr.org/i/81bbaed5d6dc19f14e9adc5da809bd7b/148459-eight.jpg" alt="Carrera family photo.">
@@ -928,6 +926,12 @@
           </div>
           <div>
             <span title>IN PERSON ENGAGEMENT:&nbsp;</span> <address>Ashley Alvarado</address><span comma>,&nbsp;</span><span>Charlotte Duren</span>
+          </div>
+        </div>
+
+        <div row>
+          <div>
+            <span title>ADDITIONAL RESEARCH:&nbsp;</span> <address>Aaron Mendelson</address>
           </div>
         </div>
       </footer>
