--- a/index.html
+++ b/index.html
@@ -833,10 +833,10 @@
 
         <section>
           <div share-story>
-            <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareFacebook', 'Feature - I See Heroes');">
+            <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fbroke%2F" onClick="ga('send', 'event', 'hsp', 'shareFacebook', 'Feature - I See Heroes');">
               <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
             </a>
-            <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareTwitter', 'Feature - I See Heroes');">
+            <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fbroke%2F" onClick="ga('send', 'event', 'hsp', 'shareTwitter', 'Feature - I See Heroes');">
               <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
             </a>
           </div>
@@ -892,13 +892,13 @@
       <footer>
         <div row>
           <div>
-            <span title>REPORTING:&nbsp;</span> <address>Priska Neely</address><span comma>,&nbsp;</span><address>Rina Palta</address>
+            <span title>REPORTING:&nbsp;</span> <address><a href="http://www.scpr.org/about/people/staff/priska-neely">Priska Neely</a></address><span comma>,&nbsp;</span><address><a href="http://www.scpr.org/about/people/staff/rina-palta">Rina Palta</a></address>
           </div>
           <div>
-            <span title>PHOTOGRAPHY:&nbsp;</span> <address>Maya Sugarman</address>
+            <span title>PHOTOGRAPHY:&nbsp;</span> <address><a href="http://www.scpr.org/about/people/staff/maya-sugarman">Maya Sugarman</a></address>
           </div>
           <div>
-            <span title>EDITOR:&nbsp;</span> <address>Evelyn Larrubia</address>
+            <span title>EDITOR:&nbsp;</span> <address><a href="http://www.scpr.org/about/people/staff/evelyn-larrubia">Evelyn Larrubia</a></address>
           </div>
         </div>
 
@@ -907,7 +907,7 @@
             <span title>ART DIRECTION AND UX DESIGN:&nbsp;</span> <span>Katie Briggs</span>
           </div>
           <div>
-            <span title>DEVELOPMENT:&nbsp;</span> <address>Chris Keller</address>
+            <span title>DEVELOPMENT:&nbsp;</span> <address><a href="http://www.scpr.org/about/people/staff/chris-keller">Chris Keller</a></address>
           </div>
           <div>
             <span title>PROJECT MANAGEMENT:&nbsp;</span> <span>Vijay Singh</span>
@@ -916,16 +916,16 @@
 
         <div row>
           <div>
-            <span title>DIGITAL ENGAGEMENT AND PROMOTION:&nbsp;</span> <address>Brianna Lee</address><span comma>,&nbsp;</span><address>Eric Zassenhaus</address>
+            <span title>DIGITAL ENGAGEMENT AND PROMOTION:&nbsp;</span> <address><a href="mailto:blee@scpr.org">Brianna Lee</a></address><span comma>,&nbsp;</span><address><a href="http://www.scpr.org/about/people/staff/eric-zassenhaus">Eric Zassenhaus</a></address>
           </div>
           <div>
-            <span title>IN PERSON ENGAGEMENT:&nbsp;</span> <address>Ashley Alvarado</address><span comma>,&nbsp;</span><span>Charlotte Duren</span>
+            <span title>IN PERSON ENGAGEMENT:&nbsp;</span> <address><a href="http://www.scpr.org/about/people/staff/ashley-alvarado">Ashley Alvarado</a></address><span comma>,&nbsp;</span><span><address><a href="http://www.scpr.org/about/people/staff/charlotte-duren">Charlotte Duren</a></address></span>
           </div>
         </div>
 
         <div row>
           <div>
-            <span title>ADDITIONAL RESEARCH:&nbsp;</span> <address>Aaron Mendelson</address>
+            <span title>ADDITIONAL RESEARCH:&nbsp;</span> <address><a href="http://www.scpr.org/about/people/staff/aaron-mendelson">Aaron Mendelson</a></address>
           </div>
         </div>
       </footer>
