Test out h1 behavior.

--- a/index.html
+++ b/index.html
@@ -166,7 +166,10 @@
       <article>
 
         <div class="hero">
-          <h1 class="headline headline--giant headline--light"><span text-break id='headline-sm-breakpoint'>Why more</span> <span text-break>California families are</span> <span text-break>becoming homeless</span></h1>
+          <h1 lg class="headline headline--giant headline--light">Why more California families are becoming homeless</h1>
+          <h1 md class="headline headline--giant headline--light"><span text-break>Why more</span> <span text-break>California families are</span> <span text-break>becoming homeless</span></h1>
+
+          <span text-break id='headline-sm-breakpoint'></span>
         </div>
 
 
