--- a/index.html
+++ b/index.html
@@ -330,10 +330,10 @@
         <aside feedback>
           <h4>HOW TO GET INVOLVED</h4>
           <p>
-            Tell us how you feel about CalWORKs' impact on families in Southern California
+            Contact KPCC about this story
           </p>
           <a href="https://docs.google.com/forms/d/e/1FAIpQLScxvZ6mfw39MkNij8qsTsda_01TIRVHRapHlD_KXhJl3zpPBQ/viewform">
-            SHARE YOUR THOUGHTS WITH KPCC
+            SHARE YOUR THOUGHTS
           </a>
         </aside>
 
@@ -464,42 +464,49 @@
                 <p description>
                   Based in the San Fernando Valley, LAFH works to connect families and individuals with services and permanent supportive housing based on their individual needs.
                 </p>
-                <a href="http://lafh.org">www.lafh.org</a>
+                <a target="_blank" href="http://lafh.org/ways-to-help/">Volunteer</a> | <a target="_blank" href="http://lafh.org/donateonline/">Donate</a>
               </li>
               <li>
                 <div title>Harbor Interfaith</div>
                 <p description>
                   Operating in the South Bay, Harbor Interfaith provides an emergency shelter for families, as well as transitional housing, workshops and supportive services like childcare and food assistance for families experiencing homelessness.
                 </p>
-                <a href="http://www.harborinterfaith.org">www.harborinterfaith.org</a>
+                <a target="_blank" href="http://www.harborinterfaith.org/support-us-2/volunteer/">Volunteer</a> | <a target="_blank" href="http://www.harborinterfaith.org/support-us-2/donate-now/">Donate</a>
               </li>
               <li>
                 <div title>St. Joseph's Center</div>
                 <p description>
                   For 40 years, Venice's St. Joseph's Center has been assisting homeless families and individuals with a food pantry and family center, where low-income families can have access to food and job training, as well as kindergarten preparation services, among others.
                 </p>
-                <a href="http://stjosephctr.org/">www.stjosephctr.org</a>
+                <a target="_blank" href="http://stjosephctr.org/how-to-help/">Volunteer</a> | <a target="_blank" href="http://stjosephctr.org/donate/">Donate</a>
               </li>
               <li>
                 <div title>PATH Los Angeles</div>
                 <p description>
                   With several centers set up across the city, PATH provides temporary housing for single mothers and their children, as well as separate centers for single men, women, veterans, and people living with HIV/AIDS. They're known for having a one-stop "mall" for homeless services, including housing, health and employment counseling, all in one place.
                 </p>
-                <a href="http://www.epath.org">www.epath.org</a>
+                <a target="_blank" href="http://www.epath.org/site/GetInvolved/volunteer.htm">Volunteer</a> | <a target="_blank" href="https://donatenow.networkforgood.org/1443040?code=Website_menu_button">Donate</a>
               </li>
               <li>
                 <div title>HOPICS</div>
                 <p description>
                   Homeless Outreach Program Integrated Care System (HOPICS) was founded by a formerly homeless man who's vision was to employ formerly homeless to provide outreach to those still on the street. Based in South L.A.,Hopics now features a home and family program focused on finding permanent housing for families with children under five, therapeutic and psychiatric services, as well as a drop-in center for families and individuals.
                 </p>
-                <a href="http://www.hopics.org">www.hopics.org</a>
+                <a target="_blank" href="http://www.hopics.org/support-us">Donate</a>
               </li>
               <li>
                 <div title>Union Station Homeless Services</div>
                 <p description>
                   With several centers active in Pasadena and the San Gabriel Valley, USHS provides temporary housing to families and individuals, and provides resources for families experiencing homelessness or at risk of becoming homeless in the near future.
                 </p>
-                <a href="https://unionstationhs.org">www.unionstationhs.org</a>
+                <a target="_blank" href="https://unionstationhs.org/help/volunteer/">Volunteer</a> | <a target="_blank" href="https://unionstationhs.org/help/donate/">Donate</a>
+              </li>
+              <li>
+                <div title>Upward Bound House</div>
+                <p description>
+                  With several centers active in Pasadena and the San Gabriel Valley, USHS provides temporary housing to families and individuals, and provides resources for families experiencing homelessness or at risk of becoming homeless in the near future.
+                </p>
+                <a target="_blank" href="http://upwardboundhouse.org">www.upwardboundhouse.org</a>
               </li>
             </ul>
           </aside>
