--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <header fixed>
         <div branding>
-          <a logo href="http://www.scpr.org/"><img src="./images/logo_kpcc-black.svg" alt="89.3 KPCC"></a>
+          <a logo href="http://www.scpr.org/"><img src="images/logo_kpcc-black.svg" alt="89.3 KPCC"></a>
           <span pipe></span>
           <h3>Broke</h3>
           <span tagline>: Why more California families are becoming homeless</span>
@@ -60,10 +60,10 @@
               <div class="jp-controls-holder">
                 <div class="jp-controls">
                   <button class="jp-play" role="button" tabindex="0">
-                    <img src="./images/ctrl_audio-play-small.svg" alt="Play">
+                    <img src="images/ctrl_audio-play-small.svg" alt="Play">
                   </button>
                   <button class="jp-pause" role="button" tabindex="0">
-                    <img src="./images/ctrl_audio-pause-small.svg" alt="Pause">
+                    <img src="images/ctrl_audio-pause-small.svg" alt="Pause">
                   </button>
                 </div>
                 <div class="jp-title" aria-label="title">&nbsp;</div>
@@ -79,15 +79,15 @@
             <div class="jp-volume-controls">
               <div class="volume">
                 <button class="jp-mute" role="button" tabindex="0">
-                  <img src="./images/ctrl_volume-mute.svg" alt="Mute">
+                  <img src="images/ctrl_volume-mute.svg" alt="Mute">
                 </button>
                 <button class="jp-volume-max hidden" role="button" tabindex="0">
-                  <img src="./images/ctrl_volume-max.svg" alt="Max Volume">
+                  <img src="images/ctrl_volume-max.svg" alt="Max Volume">
                 </button>
               </div>
               <a download-audio>U</a>
               <button class="jp-stop" role="button" tabindex="0">
-                <img src="./images/ctrl_audio-close.svg" alt="Stop">
+                <img src="images/ctrl_audio-close.svg" alt="Stop">
               </button>
             </div>
             <div class="jp-no-solution">
@@ -99,7 +99,7 @@
 
 
         <label open for="nav-drawer-toggler-checkbox">
-          <img src="./images/icon_plus.svg">
+          <img src="images/icon_plus.svg">
           <span>GET INVOLVED</span>
         </label>
       </header>
@@ -108,7 +108,7 @@
       <nav drawer id="seriesMenu">
         <header>
           <div branding>
-            <a logo href="http://www.scpr.org/"><img src="./images/logo_kpcc-black.svg" alt="89.3 KPCC"></a>
+            <a logo href="http://www.scpr.org/"><img src="images/logo_kpcc-black.svg" alt="89.3 KPCC"></a>
             <span pipe></span>
             <h3>Broke</h3>
             <span tagline>: Why more California families are becoming homeless</span>
@@ -117,7 +117,7 @@
             </label>
           </div>
           <label close for="nav-drawer-toggler-checkbox">
-            <img src="./images/icon_close.svg" alt="Close">
+            <img src="images/icon_close.svg" alt="Close">
             <span>Close</span>
           </label>
         </header>
@@ -173,15 +173,15 @@
         </div>
 
 
-        <address class="byline"><p>Published January 5, 2016</p> by <a href="http://www.scpr.org/about/people/staff/rine-palta" class="byline__link">Rina Palta</a> and <a href="http://www.scpr.org/about/people/staff/priska-neely" class="byline__link">Priska Neely</a></address>
+        <address class="byline"><p>Published January 5, 2016</p> by <a target="_blank" href="http://www.scpr.org/about/people/staff/rine-palta" class="byline__link">Rina Palta</a> and <a target="_blank" href="http://www.scpr.org/about/people/staff/priska-neely" class="byline__link">Priska Neely</a></address>
 
 
         <div share-story>
-          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareFacebook', 'Feature - I See Heroes');">
-            <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
+          <a target="_blank" href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareFacebook', 'Feature - I See Heroes');">
+            <img src="images/ctrl_share-facebook.svg" alt="Share on Facebook">
           </a>
-          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareTwitter', 'Feature - I See Heroes');">
-            <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
+          <a target="_blank" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareTwitter', 'Feature - I See Heroes');">
+            <img src="images/ctrl_share-twitter.svg" alt="Share on Twitter">
           </a>
         </div>
 
@@ -255,10 +255,10 @@
           <hr />
           <h3>Maximum monthly CalWORKs check for family of three (2007-2016)</h3>
           <img large
-            src="./images/charts/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16.png"
+            src="images/charts/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16.png"
             alt="Maximum monthly CalWORKs check for family of three (2007-2016)">
           <img small
-            src="./images/charts/Maximum_monthly_CalWORKs_check_for_family_of_three_in_California_07-16_-_SMALL.png"
+            src="images/charts/Maximum_monthly_CalWORKs_check_for_family_of_three_in_California_07-16_-_SMALL.png"
             alt="Maximum monthly CalWORKs check for family of three (2007-2016)">
           <hr />
         </figure>
@@ -279,10 +279,10 @@
           <hr />
           <h3>Homeless families on CalWORKs in LA County</h3>
           <img large
-            src="./images/charts/Homeless_families_on_CalWORKs_in_LA_County.png"
+            src="images/charts/Homeless_families_on_CalWORKs_in_LA_County.png"
             alt="Homeless families on CalWORKs in LA County">
           <img small
-            src="./images/charts/Homeless_families_on_CalWORKs_in_LA_County_-_SMALL.png"
+            src="images/charts/Homeless_families_on_CalWORKs_in_LA_County_-_SMALL.png"
             alt="Homeless families on CalWORKs in LA County">
           <hr />
         </figure>
@@ -311,10 +311,10 @@
           <hr />
           <h3>Chronically mentally ill homeless people compared to the number of homeless families on CalWORKs</h3>
           <img large
-            src="./images/charts/Chronically_mentally_ill_homeless_people_compared_to_the_number_of_homeless_families_on_CalWORKs.png"
+            src="images/charts/Chronically_mentally_ill_homeless_people_compared_to_the_number_of_homeless_families_on_CalWORKs.png"
             alt="Chronically mentally ill homeless people compared to the number of homeless families on CalWORKs">
           <img small
-            src="./images/charts/Chronically_mentally_ill_homeless_people_compared_to_the_number_of_homeless_families_on_CalWORKs_-_SMALL.png"
+            src="images/charts/Chronically_mentally_ill_homeless_people_compared_to_the_number_of_homeless_families_on_CalWORKs_-_SMALL.png"
             alt="Chronically mentally ill homeless people compared to the number of homeless families on CalWORKs">
           <hr />
         </figure>
@@ -332,7 +332,7 @@
           <p>
             Contact KPCC about this story
           </p>
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLScxvZ6mfw39MkNij8qsTsda_01TIRVHRapHlD_KXhJl3zpPBQ/viewform">
+          <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfslQ8-ocimVouvVCUeLe82-yPCec02_Xd3d7qppGA1GOv8uA/viewform">
             SHARE YOUR THOUGHTS
           </a>
         </aside>
@@ -357,7 +357,7 @@
           <img src="http://a.scpr.org/i/515c6479a08c532b47779c2cb951b80a/148416-full.jpg" alt="LAPD Medal of Valor">
           <figcaption>
             Salvago, left, and boyfriend Allan Monteagudo hold their 1-year-old son, Allan Jr., outside their RV at Panorama Park in Panorama City.  Every 72 hours, the family must move the RV 100 feet to avoid a ticket from city parking enforcement.
-            <address>Maya Sugarman / KPCC</address>
+            <address><a target="_blank" href="http://www.scpr.org/about/people/staff/maya-sugarman">Maya Sugarman / KPCC</a></address>
           </figcaption>
         </figure>
 
@@ -392,7 +392,7 @@
             <img src="http://a.scpr.org/i/ce436cb91c9976ff89f03ab08947eea9/148417-eight.jpg">
             <figcaption>
               One-year-old Allan Monteagudo Jr. plays with his toys outside his family's RV at Panorama Park.  Before he was born, A.J. was diagnosed with spina bifida, a serious neurological condition.
-              <address>Maya Sugarman / KPCC</address>
+              <address><a target="_blank" href="http://www.scpr.org/about/people/staff/maya-sugarman">Maya Sugarman / KPCC</a></address>
             </figcaption>
           </figure>
 
@@ -443,10 +443,10 @@
           <hr />
           <h3>Students in public schools who are homeless</h3>
           <img large
-            src="./images/charts/Students_in_public_schools_who_are_homeless.png"
+            src="images/charts/Students_in_public_schools_who_are_homeless.png"
             alt="Students in public schools who are homeless">
           <img small
-            src="./images/charts/Students_in_public_schools_who_are_homeless_-_SMALL.png"
+            src="images/charts/Students_in_public_schools_who_are_homeless_-_SMALL.png"
             alt="Students in public schools who are homeless">
           <hr />
         </figure>
@@ -457,7 +457,7 @@
 
           <aside call-to-action>
             <h4>How to get involved</h4>
-            <h3>Get involved with these organizations that help homeless families in Southern California</h3>
+            <h3>These organizations work with homeless families in Southern California</h3>
             <ul>
               <li>
                 <div title>L.A. Family Housing</div>
@@ -557,7 +557,7 @@
           <img src="http://a.scpr.org/i/051fbf04b0f3081595f6bc1f5d222b6e/148477-full.jpg">
           <figcaption>
             Tandra Dixon's two-year-old son had been homeless since he was an infant.
-            <address>Maya Sugarman / KPCC</address>
+            <address><a target="_blank" href="http://www.scpr.org/about/people/staff/maya-sugarman">Maya Sugarman / KPCC</a></address>
           </figcaption>
         </figure>
 
@@ -585,10 +585,10 @@
           <hr />
           <h3>Maximum monthly CalWORKs check or a family of three in California (1 adult + 2 children)</h3>
           <img large
-            src="./images/charts/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16.png"
+            src="images/charts/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16.png"
             alt="Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16">
           <img small
-            src="./images/charts/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16.png"
+            src="images/charts/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16.png"
             alt="Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16">
           <hr />
         </figure>
@@ -728,7 +728,7 @@
           <img src="http://a.scpr.org/i/0f15cdc567c8579df30e13dbd57fcd14/148462-full.jpg">
           <figcaption>
             Maria Carrera spends time with her children during a hot summer day in their four-bedroom apartment in Anaheim, Calif.  A rapid rehousing program paid for most of the $2,400 rent.
-            <address>Maya Sugarman / KPCC</address>
+            <address><a target="_blank" href="http://www.scpr.org/about/people/staff/maya-sugarman">Maya Sugarman / KPCC</a></address>
           </figcaption>
         </figure>
 
@@ -772,7 +772,7 @@
             <img src="http://a.scpr.org/i/eb52274ad53682fdef0576da36eac6f8/148464-full.jpg">
             <figcaption>
               Alexandra Lazaro, 16 at the time, sits on her bed in her family’s four-bedroom apartment in Anaheim. Lazaro, who is now in her junior year of high school, says her grades suffered while her family bounced from shelter to shelter.
-              <address>Maya Sugarman / KPCC</address>
+              <address><a target="_blank" href="http://www.scpr.org/about/people/staff/maya-sugarman">Maya Sugarman / KPCC</a></address>
             </figcaption>
           </figure>
 
@@ -822,7 +822,7 @@
             <img src="http://a.scpr.org/i/81bbaed5d6dc19f14e9adc5da809bd7b/148459-eight.jpg" alt="Carrera family photo.">
             <figcaption>
               A photo of the Carrera family in their former rental in Anaheim.
-              <address>Maya Sugarman / KPCC</address>
+              <address><a target="_blank" href="http://www.scpr.org/about/people/staff/maya-sugarman">Maya Sugarman / KPCC</a></address>
             </figcaption>
           </figure>
 
@@ -840,11 +840,11 @@
 
         <section>
           <div share-story>
-            <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fbroke%2F" onClick="ga('send', 'event', 'hsp', 'shareFacebook', 'Feature - I See Heroes');">
-              <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
+            <a target="_blank" href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fbroke%2F" onClick="ga('send', 'event', 'hsp', 'shareFacebook', 'Feature - I See Heroes');">
+              <img src="images/ctrl_share-facebook.svg" alt="Share on Facebook">
             </a>
-            <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fbroke%2F" onClick="ga('send', 'event', 'hsp', 'shareTwitter', 'Feature - I See Heroes');">
-              <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
+            <a target="_blank" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fbroke%2F" onClick="ga('send', 'event', 'hsp', 'shareTwitter', 'Feature - I See Heroes');">
+              <img src="images/ctrl_share-twitter.svg" alt="Share on Twitter">
             </a>
           </div>
         </section>
@@ -896,13 +896,13 @@
       <footer>
         <div row>
           <div>
-            <span title>REPORTING:&nbsp;</span> <address><a href="http://www.scpr.org/about/people/staff/priska-neely">Priska Neely</a></address><span comma>,&nbsp;</span><address><a href="http://www.scpr.org/about/people/staff/rina-palta">Rina Palta</a></address>
+            <span title>REPORTING:&nbsp;</span> <address><a target="_blank" href="http://www.scpr.org/about/people/staff/priska-neely">Priska Neely</a></address><span comma>,&nbsp;</span><address><a target="_blank" href="http://www.scpr.org/about/people/staff/rina-palta">Rina Palta</a></address>
           </div>
           <div>
-            <span title>PHOTOGRAPHY:&nbsp;</span> <address><a href="http://www.scpr.org/about/people/staff/maya-sugarman">Maya Sugarman</a></address>
+            <span title>PHOTOGRAPHY:&nbsp;</span> <address><a target="_blank" href="http://www.scpr.org/about/people/staff/maya-sugarman">Maya Sugarman</a></address>
           </div>
           <div>
-            <span title>EDITOR:&nbsp;</span> <address><a href="http://www.scpr.org/about/people/staff/evelyn-larrubia">Evelyn Larrubia</a></address>
+            <span title>EDITOR:&nbsp;</span> <address><a target="_blank" href="http://www.scpr.org/about/people/staff/evelyn-larrubia">Evelyn Larrubia</a></address>
           </div>
         </div>
 
@@ -911,7 +911,7 @@
             <span title>ART DIRECTION AND UX DESIGN:&nbsp;</span> <span>Katie Briggs</span>
           </div>
           <div>
-            <span title>DEVELOPMENT:&nbsp;</span> <address><a href="http://www.scpr.org/about/people/staff/chris-keller">Chris Keller</a></address>
+            <span title>DEVELOPMENT:&nbsp;</span> <address><a target="_blank" href="http://www.scpr.org/about/people/staff/chris-keller">Chris Keller</a></address>
           </div>
           <div>
             <span title>PROJECT MANAGEMENT:&nbsp;</span> <span>Vijay Singh</span>
@@ -920,16 +920,16 @@
 
         <div row>
           <div>
-            <span title>DIGITAL ENGAGEMENT AND PROMOTION:&nbsp;</span> <address><a href="mailto:blee@scpr.org">Brianna Lee</a></address><span comma>,&nbsp;</span><address><a href="http://www.scpr.org/about/people/staff/eric-zassenhaus">Eric Zassenhaus</a></address>
+            <span title>DIGITAL ENGAGEMENT AND PROMOTION:&nbsp;</span> <address><a target="_blank" href="mailto:blee@scpr.org">Brianna Lee</a></address><span comma>,&nbsp;</span><address><a target="_blank" href="http://www.scpr.org/about/people/staff/eric-zassenhaus">Eric Zassenhaus</a></address>
           </div>
           <div>
-            <span title>IN PERSON ENGAGEMENT:&nbsp;</span> <address><a href="http://www.scpr.org/about/people/staff/ashley-alvarado">Ashley Alvarado</a></address><span comma>,&nbsp;</span><span><address><a href="http://www.scpr.org/about/people/staff/charlotte-duren">Charlotte Duren</a></address></span>
+            <span title>IN PERSON ENGAGEMENT:&nbsp;</span> <address><a target="_blank" href="http://www.scpr.org/about/people/staff/ashley-alvarado">Ashley Alvarado</a></address><span comma>,&nbsp;</span><span><address><a target="_blank" href="http://www.scpr.org/about/people/staff/charlotte-duren">Charlotte Duren</a></address></span>
           </div>
         </div>
 
         <div row>
           <div>
-            <span title>ADDITIONAL RESEARCH:&nbsp;</span> <address><a href="http://www.scpr.org/about/people/staff/aaron-mendelson">Aaron Mendelson</a></address>
+            <span title>ADDITIONAL RESEARCH:&nbsp;</span> <address><a target="_blank" href="http://www.scpr.org/about/people/staff/aaron-mendelson">Aaron Mendelson</a></address>
           </div>
         </div>
       </footer>
@@ -990,6 +990,6 @@
       <!-- end comscore stats -->
 
     <script src="//maps.google.com/maps/api/js?key=AIzaSyAtS1OYyuRY0inb23BK0nuGId3FiOC6Rb8&libraries=places"></script>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
