--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@
             alt="Maximum monthly CalWORKs check for family of three (2007-2016)">
           <img small
             src="images/charts/Maximum_monthly_CalWORKs_check_for_family_of_three_in_California_07-16_-_SMALL.png"
-            alt="Maximum monthly CalWORKs check for family of three (2007-2016)">
+            alt="Maximum monthly CalWORKs check for family of three (2007-2016)"
+            srcset="images/charts/2x/Maximum_monthly_CalWORKs_check_for_family_of_three_in_California_07-16_-_SMALL.png 2x">
           <hr />
         </figure>
 
@@ -283,6 +284,7 @@
             alt="Homeless families on CalWORKs in LA County">
           <img small
             src="images/charts/Homeless_families_on_CalWORKs_in_LA_County_-_SMALL.png"
+            srcset="images/charts/2x/Homeless_families_on_CalWORKs_in_LA_County_-_SMALL.png 2x"
             alt="Homeless families on CalWORKs in LA County">
           <hr />
         </figure>
@@ -315,7 +317,8 @@
             alt="Chronically mentally ill homeless people compared to the number of homeless families on CalWORKs">
           <img small
             src="images/charts/Chronically_mentally_ill_homeless_people_compared_to_the_number_of_homeless_families_on_CalWORKs_-_SMALL.png"
-            alt="Chronically mentally ill homeless people compared to the number of homeless families on CalWORKs">
+            alt="Chronically mentally ill homeless people compared to the number of homeless families on CalWORKs"
+            srcset="images/charts/2x/Chronically_mentally_ill_homeless_people_compared_to_the_number_of_homeless_families_on_CalWORKs_-_SMALL.png 2x">
           <hr />
         </figure>
 
@@ -447,7 +450,8 @@
             alt="Students in public schools who are homeless">
           <img small
             src="images/charts/Students_in_public_schools_who_are_homeless_-_SMALL.png"
-            alt="Students in public schools who are homeless">
+            alt="Students in public schools who are homeless"
+            srcset="images/charts/2x/Students_in_public_schools_who_are_homeless_-_SMALL.png 2x">
           <hr />
         </figure>
 
@@ -589,7 +593,8 @@
             alt="Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16">
           <img small
             src="images/charts/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16.png"
-            alt="Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16">
+            alt="Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16"
+            srcset="images/charts/2x/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16.png 2x">
           <hr />
         </figure>
 
