Add retina images and download button.

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
               </div>
             </div>
             <div class="jp-volume-controls">
+              <a class="jp-audio-download" target="_blank">
+                <img src="images/ctrl_download.svg" alt="Download" download="true">
+              </a>
               <div class="volume">
                 <button class="jp-mute" role="button" tabindex="0">
                   <img src="images/ctrl_volume-mute.svg" alt="Mute">
@@ -85,7 +88,6 @@
                   <img src="images/ctrl_volume-max.svg" alt="Max Volume">
                 </button>
               </div>
-              <a download-audio>U</a>
               <button class="jp-stop" role="button" tabindex="0">
                 <img src="images/ctrl_audio-close.svg" alt="Stop">
               </button>
@@ -260,7 +262,7 @@
           <img small
             src="images/charts/Maximum_monthly_CalWORKs_check_for_family_of_three_in_California_07-16_-_SMALL.png"
             alt="Maximum monthly CalWORKs check for family of three (2007-2016)"
-            srcset="images/charts/2x/Maximum_monthly_CalWORKs_check_for_family_of_three_in_California_07-16_-_SMALL.png 2x">
+            srcset="images/charts/2x/Maximum_monthly_CalWORKs_check_for_family_of_three_in_California_07-16_-_SMALL_retina.png 2x">
           <hr />
         </figure>
 
@@ -284,7 +286,7 @@
             alt="Homeless families on CalWORKs in LA County">
           <img small
             src="images/charts/Homeless_families_on_CalWORKs_in_LA_County_-_SMALL.png"
-            srcset="images/charts/2x/Homeless_families_on_CalWORKs_in_LA_County_-_SMALL.png 2x"
+            srcset="images/charts/2x/Homeless_families_on_CalWORKs_in_LA_County_-_SMALL_retina.png 2x"
             alt="Homeless families on CalWORKs in LA County">
           <hr />
         </figure>
@@ -318,7 +320,7 @@
           <img small
             src="images/charts/Chronically_mentally_ill_homeless_people_compared_to_the_number_of_homeless_families_on_CalWORKs_-_SMALL.png"
             alt="Chronically mentally ill homeless people compared to the number of homeless families on CalWORKs"
-            srcset="images/charts/2x/Chronically_mentally_ill_homeless_people_compared_to_the_number_of_homeless_families_on_CalWORKs_-_SMALL.png 2x">
+            srcset="images/charts/2x/Chronically_mentally_ill_homeless_people_compared_to_the_number_of_homeless_families_on_CalWORKs_-_SMALL_retina.png 2x">
           <hr />
         </figure>
 
@@ -451,7 +453,7 @@
           <img small
             src="images/charts/Students_in_public_schools_who_are_homeless_-_SMALL.png"
             alt="Students in public schools who are homeless"
-            srcset="images/charts/2x/Students_in_public_schools_who_are_homeless_-_SMALL.png 2x">
+            srcset="images/charts/2x/Students_in_public_schools_who_are_homeless_-_SMALL_retina.png 2x">
           <hr />
         </figure>
 
@@ -594,7 +596,7 @@
           <img small
             src="images/charts/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16.png"
             alt="Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16"
-            srcset="images/charts/2x/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16.png 2x">
+            srcset="images/charts/2x/Maximum_monthly_CalWORKs_check_for_family_of_three_in_California_07-16_-_SMALL_retina.png 2x">
           <hr />
         </figure>
 
