Revisions and audio piece 2.

--- a/index.html
+++ b/index.html
@@ -152,12 +152,11 @@
               <h3>FACTS YOU MAY WANT TO SHARE</h3>
               <section>
                 <ul>
-                    <li>Nearly 60,000 families called L.A. County's 211 line for help finding emergency shelter in 2015. And women and children surpassed the number of single men seeking refuge at Los Angeles' Union Rescue Mission on Skid Row last year&mdash;the first time that's happened in its 125-year history.</li>
-                    <li>Since 2010, eight infants identified by Los Angles County officials as homeless died sleeping in conditions experts call unsuitable, but were the families only option.</li>
-                    <li>Harvest Home, in Venice, can take in about two dozen pregnant women in a year. Workers there estimate they had to turn away about 500 pregnant women last year.</li>
-                    <li>Orange and San Bernardino county school officials report the number of students without stable housing tripled over the past decade, to 26,064 in Orange County public schools and 35,165 in San Bernardino. Los Angeles public schools have identified 54,916 homeless students.</li>
+                  <li>Nearly 60,000 families called L.A. County's 211 line for help finding emergency shelter in 2015. And women and children surpassed the number of single men seeking refuge at Los Angeles' Union Rescue Mission on Skid Row last year&mdash;the first time that's happened in its 125-year history.</li>
+                  <li>Since 2010, eight infants identified by Los Angles County officials as homeless died sleeping in conditions experts call unsuitable, but were the families only option.</li>
+                  <li>Harvest Home, in Venice, can take in about two dozen pregnant women in a year. Workers there estimate they had to turn away about 500 pregnant women last year.</li>
+                  <li>Orange and San Bernardino county school officials report the number of students without stable housing tripled over the past decade, to 26,064 in Orange County public schools and 35,165 in San Bernardino. Los Angeles public schools have identified 54,916 homeless students.</li>
                 </ul>
-  
               </section>
             </div>
           </form>
@@ -175,7 +174,7 @@
         </div>
 
 
-        <address class="byline"><p>Published January 5, 2016</p> by <a target="_blank" href="http://www.scpr.org/about/people/staff/rine-palta" class="byline__link">Rina Palta</a> and <a target="_blank" href="http://www.scpr.org/about/people/staff/priska-neely" class="byline__link">Priska Neely</a></address>
+        <address class="byline"><p>Published January 5, 2017</p> by <a target="_blank" href="http://www.scpr.org/about/people/staff/rine-palta" class="byline__link">Rina Palta</a> and <a target="_blank" href="http://www.scpr.org/about/people/staff/priska-neely" class="byline__link">Priska Neely</a></address>
 
 
         <div share-story>
@@ -361,7 +360,7 @@
         <figure>
           <img src="http://a.scpr.org/i/515c6479a08c532b47779c2cb951b80a/148416-full.jpg" alt="LAPD Medal of Valor">
           <figcaption>
-            Salvago, left, and boyfriend Allan Monteagudo hold their 1-year-old son, Allan Jr., outside their RV at Panorama Park in Panorama City.  Every 72 hours, the family must move the RV 100 feet to avoid a ticket from city parking enforcement.
+            Lackee Salvago, left, and boyfriend Allan Monteagudo hold their 1-year-old son, Allan Jr., outside their RV at Panorama Park in Panorama City.  Every 72 hours, the family must move the RV 100 feet to avoid a ticket from city parking enforcement.
             <address><a target="_blank" href="http://www.scpr.org/about/people/staff/maya-sugarman">Maya Sugarman / KPCC</a></address>
           </figcaption>
         </figure>
@@ -591,12 +590,12 @@
           <hr />
           <h3>Maximum monthly CalWORKs check or a family of three in California (1 adult + 2 children)</h3>
           <img large
-            src="images/charts/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16.png"
+            src="images/charts/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_89-16.png"
             alt="Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16">
           <img small
-            src="images/charts/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16.png"
+            src="images/charts/Maximum_monthly_CalWORKs_check_for_family_of_three_in_California_89-16_-_SMALL.png"
             alt="Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16"
-            srcset="images/charts/2x/Maximum_monthly_CalWORKs_check_for_family_of_three_in_California_07-16_-_SMALL_retina.png 2x">
+            srcset="images/charts/2x/Maximum_monthly_CalWORKs_check_for_family_of_three_in_California_89-16_-_SMALL_retina.png 2x">
           <hr />
         </figure>
 
@@ -608,7 +607,7 @@
 
           <p>When she had her daughter 17 years ago, the nearly $600 monthly checks from CalWORKs helped keep her small family afloat.</p>
 
-          <p>“I was paying my rent. I was paying my bills. I was going to work and I had my single apartment,” she said “All off of CalWORKs, b ut the rent was cheap."</p>
+          <p>“I was paying my rent. I was paying my bills. I was going to work and I had my single apartment,” she said “All off of CalWORKs, but the rent was cheap."</p>
 
           <p>“Now? Everything’s a thousand and up,” she said.</p>
 
@@ -629,13 +628,13 @@
 
 
         <aside audio story-audio-2
-        data-title="Get Down (Feat. Peaches)"
-        data-src="https://s3-us-west-1.amazonaws.com/scpr-projects/broke/Get+Down+(Feat.+Peaches).mp3"
-        onClick="ga('send', 'event', 'hsp', 'audioPlay', 'Get Down (Feat. Peaches)');">
+        data-title="Broke: Roundtable Conversation"
+        data-src="https://s3-us-west-1.amazonaws.com/scpr-projects/broke/roundtable+interview.mp3"
+        onClick="ga('send', 'event', 'hsp', 'audioPlay', 'Broke: Roundtable Conversation');">
           <button play></button>
           <div details>
-            <span title>Get Down (Feat. Peaches)</span>
-            <span duration>4 min 32 sec</span>
+            <span title>Broke: Roundtable Conversation</span>
+            <span duration>15 min 27 sec</span>
           </div>
         </aside>
 
@@ -679,7 +678,7 @@
 
           <p>“But you cannot pay your rent with your Medi-Cal card and you can’t pay your rent with your CalFresh benefits,” Mecca said. “We’ve not even come close to making up for what we haven’t provided over the last 25 years to CalWORKs recipients.”</p>
 
-          <p>Mitchell, the state senator, told KPCC she will fight to have the grant increased in the budget cycle that starts this month. But acknowledged she has some key people to convince.</p>
+          <p>Mitchell, the state senator, told KPCC she will fight to have the grant increased in the budget cycle that starts this month, but acknowledged she has some key people to convince.</p>
 
           <p>"I think it's primarily the Department of Finance and the governor, who have the same access to data and statistics that I do,” she said.</p>
 
@@ -740,7 +739,7 @@
         </figure>
 
 
-        <h2>After bouncing around from shelter to shelter, Maria Carrera was accepted into a rapid rehousing program in 2014 with her six minor children, one adult daughter and grandson.  The voucher paid most of the rend on a four-bedroom apartment.</h2>
+        <h2>After bouncing around from shelter to shelter, Maria Carrera was accepted into a rapid rehousing program in 2014 with her six minor children, one adult daughter and grandson. The voucher paid most of the rent on a four-bedroom apartment.</h2>
 
 
         <section>
@@ -891,7 +890,7 @@
           <section>
             <ul>
                 <li>Nearly 60,000 families called L.A. County's 211 line for help finding emergency shelter in 2015. And women and children surpassed the number of single men seeking refuge at Los Angeles' Union Rescue Mission on Skid Row last year&mdash;the first time that's happened in its 125-year history.</li>
-                <li>Since 2010, eight infants identified by Los Angles County officials as homeless died sleeping in conditions experts call unsuitable, but were the families only option.</li>
+                <li>Since 2010, eight infants identified by Los Angles County officials as homeless died sleeping in conditions experts call unsuitable, but were the families' only option.</li>
                 <li>Harvest Home, in Venice, can take in about two dozen pregnant women in a year. Workers there estimate they had to turn away about 500 pregnant women last year.</li>
                 <li>Orange and San Bernardino county school officials report the number of students without stable housing tripled over the past decade, to 26,064 in Orange County public schools and 35,165 in San Bernardino. Los Angeles public schools have identified 54,916 homeless students.</li>
             </ul>
