--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               </div>
             </div>
             <div class="jp-volume-controls">
-              <a class="jp-audio-download" target="_blank">
+              <a class="jp-audio-download" target="_blank" onClick="ga('send', 'event', 'broke', 'audioDownload', 'Broke Audio');">
                 <img src="images/ctrl_download.svg" alt="Download" download="true">
               </a>
               <div class="volume">
@@ -178,10 +178,10 @@
 
 
         <div share-story>
-          <a target="_blank" href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareFacebook', 'Feature - I See Heroes');">
+          <a target="_blank" href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'broke', 'shareFacebook', 'Feature - I See Heroes');">
             <img src="images/ctrl_share-facebook.svg" alt="Share on Facebook">
           </a>
-          <a target="_blank" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareTwitter', 'Feature - I See Heroes');">
+          <a target="_blank" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'broke', 'shareTwitter', 'Feature - I See Heroes');">
             <img src="images/ctrl_share-twitter.svg" alt="Share on Twitter">
           </a>
         </div>
@@ -193,7 +193,7 @@
         <aside audio story-audio-1
         data-title="Broke: A special report"
         data-src="https://s3-us-west-1.amazonaws.com/scpr-projects/broke/BROKE+SPECIAL.mp3"
-        onClick="ga('send', 'event', 'hsp', 'audioPlay', 'Broke: A special report');">
+        onClick="ga('send', 'event', 'broke', 'audioPlay', 'Broke: A special report');">
           <button play></button>
           <div details>
             <span title>Broke: A special report</span>
@@ -312,13 +312,13 @@
 
         <figure graphic>
           <hr />
-          <h3>Chronically mentally ill homeless people compared to the number of homeless families on CalWORKs</h3>
+          <h3>Chronically homeless people compared to the number of homeless families on CalWORKs</h3>
           <img large
             src="images/charts/Chronically_mentally_ill_homeless_people_compared_to_the_number_of_homeless_families_on_CalWORKs.png"
-            alt="Chronically mentally ill homeless people compared to the number of homeless families on CalWORKs">
+            alt="Chronically homeless people compared to the number of homeless families on CalWORKs">
           <img small
             src="images/charts/Chronically_mentally_ill_homeless_people_compared_to_the_number_of_homeless_families_on_CalWORKs_-_SMALL.png"
-            alt="Chronically mentally ill homeless people compared to the number of homeless families on CalWORKs"
+            alt="Chronically homeless people compared to the number of homeless families on CalWORKs"
             srcset="images/charts/2x/Chronically_mentally_ill_homeless_people_compared_to_the_number_of_homeless_families_on_CalWORKs_-_SMALL_retina.png 2x">
           <hr />
         </figure>
@@ -628,12 +628,12 @@
 
 
         <aside audio story-audio-2
-        data-title="Broke: Roundtable Conversation"
+        data-title="Broke: Roundtable"
         data-src="https://s3-us-west-1.amazonaws.com/scpr-projects/broke/roundtable+interview.mp3"
-        onClick="ga('send', 'event', 'hsp', 'audioPlay', 'Broke: Roundtable Conversation');">
+        onClick="ga('send', 'event', 'broke', 'audioPlay', 'Broke: Roundtable');">
           <button play></button>
           <div details>
-            <span title>Broke: Roundtable Conversation</span>
+            <span title>Broke: Roundtable</span>
             <span duration>15 min 27 sec</span>
           </div>
         </aside>
@@ -846,10 +846,10 @@
 
         <section>
           <div share-story>
-            <a target="_blank" href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fbroke%2F" onClick="ga('send', 'event', 'hsp', 'shareFacebook', 'Feature - I See Heroes');">
+            <a target="_blank" href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fbroke%2F" onClick="ga('send', 'event', 'broke', 'shareFacebook', 'Feature - I See Heroes');">
               <img src="images/ctrl_share-facebook.svg" alt="Share on Facebook">
             </a>
-            <a target="_blank" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fbroke%2F" onClick="ga('send', 'event', 'hsp', 'shareTwitter', 'Feature - I See Heroes');">
+            <a target="_blank" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fbroke%2F" onClick="ga('send', 'event', 'broke', 'shareTwitter', 'Feature - I See Heroes');">
               <img src="images/ctrl_share-twitter.svg" alt="Share on Twitter">
             </a>
           </div>
