--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Broke: Why more California families are becoming homeless" />
     <meta property="og:url" content="http://projects.scpr.org/broke/" />
     <meta property="og:description" content="Interest in solving homelessness has intensified over the past year. But there’s a side to the crisis that hasn’t garnered as much attention: an endless stream of families slipping into homelessness. There are more than 16,000 homeless families in Los Angeles County alone. Here’s why that’s happening." />
-    <meta property="og:image" content="http://a.scpr.org/i/b10ec0efebe4392a9bcbd2e99a70f0c3/148452-full.jpg" />
+    <meta property="og:image" content="http://a.scpr.org/i/515c6479a08c532b47779c2cb951b80a/148416-full.jpg" />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="683" />
     <meta property="og:locale" content="en_US" />
@@ -19,7 +19,7 @@
     <meta name="twitter:creator" content="@KPCC" />
     <meta name="twitter:title" content="Broke: Why more California families are becoming homeless">
     <meta name="twitter:url" content="http://projects.scpr.org/broke/" />
-    <meta name="twitter:image" content="http://a.scpr.org/i/b10ec0efebe4392a9bcbd2e99a70f0c3/148452-full.jpg" />
+    <meta name="twitter:image" content="http://a.scpr.org/i/515c6479a08c532b47779c2cb951b80a/148416-full.jpg" />
     <meta name="twitter:description" content="Interest in solving homelessness has intensified over the past year. But there’s a side to the crisis that hasn’t garnered as much attention: an endless stream of families slipping into homelessness. There are more than 16,000 homeless families in Los Angeles County alone. Here’s why that’s happening." />
     <link rel="shortcut icon" href="../../favicon.ico">
 
@@ -152,7 +152,7 @@
               <h3>FACTS YOU MAY WANT TO SHARE</h3>
               <section>
                 <ul>
-                  <li>Families placed nearly 60,000 calls to L.A. county’s 211 line for help finding emergency shelter in 2015, double the number from three years earlier, double the number from three years earlier.</li>
+                  <li>Families made nearly 60,000 calls to L.A. County's 211 line for help finding emergency shelter in 2015. And women and children surpassed the number of single men seeking refuge at Los Angeles' Union Rescue Mission on Skid Row last year&mdash;the first time that's happened in its 125-year history.</li>
                   <li>Since 2010, eight infants identified by Los Angles County officials as homeless died sleeping in conditions experts call unsuitable, but were the families only option.</li>
                   <li>Harvest Home, in Venice, can take in about two dozen pregnant women in a year. Workers there estimate they had to turn away about 500 pregnant women last year.</li>
                   <li>Orange and San Bernardino county school officials report the number of students without stable housing tripled over the past decade, to 26,064 in Orange County public schools and 35,165 in San Bernardino. Los Angeles public schools have identified 54,916 homeless students.</li>
@@ -430,7 +430,7 @@
 
         <section>
           <ul>
-            <li>Nearly 60,000 families placed calls to L.A. County’s 211 line for help finding emergency shelter in 2015, double the number from three years earlier. The majority of these calls involved families with children under 5 and pregnant women.</li>
+            <li>Families placed nearly 60,000 calls to L.A. county’s 211 line for help finding emergency shelter in 2015, double the number from three years earlier, double the number from three years earlier. The majority of these calls involved families with children under 5 and pregnant women.</li>
 
             <li>L.A. County officials estimate 8,000 women become homeless annually in the county at some point during pregnancy. There are only 69 dedicated beds for pregnant women in L.A. County, according to The Harvest Home, in Venice, which has room for about two dozen pregnant women a year. Workers there estimate they had to turn away about 500 pregnant women last year.</li>
 
@@ -889,7 +889,7 @@
           <h3>FACTS YOU MAY WANT TO SHARE</h3>
           <section>
             <ul>
-                <li>Families placed nearly 60,000 calls to L.A. county’s 211 line for help finding emergency shelter in 2015, double the number from three years earlier, double the number from three years earlier.</li>
+                <li>Families made nearly 60,000 calls to L.A. County's 211 line for help finding emergency shelter in 2015. And women and children surpassed the number of single men seeking refuge at Los Angeles' Union Rescue Mission on Skid Row last year&mdash;the first time that's happened in its 125-year history.</li>
                 <li>Since 2010, eight infants identified by Los Angles County officials as homeless died sleeping in conditions experts call unsuitable, but were the families' only option.</li>
                 <li>Harvest Home, in Venice, can take in about two dozen pregnant women in a year. Workers there estimate they had to turn away about 500 pregnant women last year.</li>
                 <li>Orange and San Bernardino county school officials report the number of students without stable housing tripled over the past decade, to 26,064 in Orange County public schools and 35,165 in San Bernardino. Los Angeles public schools have identified 54,916 homeless students.</li>
@@ -917,7 +917,7 @@
             <span title>ART DIRECTION AND UX DESIGN:&nbsp;</span> <span>Katie Briggs</span>
           </div>
           <div>
-            <span title>DEVELOPMENT:&nbsp;</span> <address><a target="_blank" href="http://www.scpr.org/about/people/staff/chris-keller">Chris Keller</a></address>
+            <span title>DEVELOPMENT:&nbsp;</span> <address><a target="_blank" href="http://www.scpr.org/about/people/staff/chris-keller">Chris Keller</a></address><span comma>,&nbsp;</span><address><a target="_blank" href="http://github.com/ravenstine">Ben Titcomb</a></address>
           </div>
           <div>
             <span title>PROJECT MANAGEMENT:&nbsp;</span> <span>Vijay Singh</span>
