addresses a couple typos in the body copy

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
           <p>And that means for the past six months, it has served its purpose: a home for the family. Monteagudo hopes it’ll continue to be – though the city of Los Angeles has banned sleeping in cars and RVs on residential city streets. The prohibition goes into effect Jan. 7.</p>
 
-          <p>For now, Monteagudo and Salvago sleep in the RV’s full-size bed with A.J. Aaron curls up on the kitchen bench. They cook on portable stoves and drink bottled water. They shower at a nearby 24 Hour Fitness. The monthly fee is worth it for the showers. </p>
+          <p>For now, Monteagudo and Salvago sleep in the RV’s full-size bed while A.J. Aaron curls up on the kitchen bench. They cook on portable stoves and drink bottled water. They shower at a nearby 24 Hour Fitness. The monthly fee is worth it for the showers. </p>
 
           <p>Salvago sometimes works as an in-home caregiver.</p>
 
@@ -430,7 +430,7 @@
 
         <section>
           <ul>
-            <li>Families placed nearly 60,000 calls to L.A. county’s 211 line for help finding emergency shelter in 2015, double the number from three years earlier, double the number from three years earlier. The majority of these calls involved families with children under 5 and pregnant women.</li>
+            <li>Families placed nearly 60,000 calls to L.A. county’s 211 line for help finding emergency shelter in 2015, double the number from three years earlier. The majority of these calls involved families with children under 5 and pregnant women.</li>
 
             <li>L.A. County officials estimate 8,000 women become homeless annually in the county at some point during pregnancy. There are only 69 dedicated beds for pregnant women in L.A. County, according to The Harvest Home, in Venice, which has room for about two dozen pregnant women a year. Workers there estimate they had to turn away about 500 pregnant women last year.</li>
 
